--- a/UmaInheritanceCalculator/MainWindow.xaml
+++ b/UmaInheritanceCalculator/MainWindow.xaml
@@ -6,7 +6,14 @@
         xmlns:local="clr-namespace:UmaInheritanceCalculator"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <Style x:Key="UmaStyle" TargetType="{x:Type TextBlock}">
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="FontFamily" Value="Comic Sans MS"/>
+            <Setter Property="FontSize" Value="24"/>
+        </Style>
+    </Window.Resources>
     <Grid>
-
+        <TextBlock Style="{StaticResource UmaStyle}" HorizontalAlignment="Left" Margin="23,32,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Uma Calculator"/>
     </Grid>
 </Window>
