--- a/UmaInheritanceCalculator/MainWindow.xaml
+++ b/UmaInheritanceCalculator/MainWindow.xaml
@@ -14,6 +14,31 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <TextBlock Style="{StaticResource UmaStyle}" HorizontalAlignment="Left" Margin="23,32,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Uma Calculator"/>
+        <TextBlock Style="{StaticResource UmaStyle}" HorizontalAlignment="Left" Margin="10,27,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Uma Calculator" Width="173"/>
+        <Grid x:Name="UmaInfoBox" Height="400" Width="600" Margin="192,0,8,34">
+            <Rectangle HorizontalAlignment="Left" Height="400" Margin="0,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="600"/>
+            <Label Content="Current Horse:" HorizontalAlignment="Left" Margin="25,23,0,0" VerticalAlignment="Top"/>
+            <Label Content="Parent Status:" HorizontalAlignment="Left" Margin="309,23,0,0" VerticalAlignment="Top"/>
+            <Label Content="White Sparks:" HorizontalAlignment="Left" Margin="70,93,0,0" VerticalAlignment="Top"/>
+            <Label Content="Red Sparks:" HorizontalAlignment="Center" Margin="0,93,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.361,0.625"/>
+            <Label Content="Blue Sparks:" HorizontalAlignment="Left" Margin="450,93,0,0" VerticalAlignment="Top"/>
+            <Label Content="Placeholder button for calculating inheritance" HorizontalAlignment="Center" Margin="0,241,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.021,0.687" Width="260"/>
+            <Label Content="Chance of inheriting this spark in two rounds" HorizontalAlignment="Center" Margin="0,272,0,0" VerticalAlignment="Top" Width="248"/>
+            <Label Content="Chance placeholder" HorizontalAlignment="Center" Margin="0,312,0,0" VerticalAlignment="Top"/>
+            <Label Content="ListBox of selectable items here" HorizontalAlignment="Left" Margin="25,124,0,0" VerticalAlignment="Top"/>
+            <Label Content="ListBox of selectable items here" HorizontalAlignment="Center" Margin="0,124,0,0" VerticalAlignment="Top"/>
+            <Label Content="ListBox of selectable items here" HorizontalAlignment="Left" Margin="402,124,0,0" VerticalAlignment="Top"/>
+            <Label Content="More Details button (a popup)" HorizontalAlignment="Center" Margin="0,354,0,0" VerticalAlignment="Top"/>
+            <Label Content="Dropdown and initial horse name" HorizontalAlignment="Left" Margin="117,23,0,0" VerticalAlignment="Top"/>
+            <Label Content="Placeholder Label" HorizontalAlignment="Left" Margin="396,23,0,0" VerticalAlignment="Top"/>
+
+        </Grid>
+        <Label Content="Upload Image button" HorizontalAlignment="Left" Margin="35,111,0,0" VerticalAlignment="Top"/>
+        <Label Content="Parent One and Grandparents" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.19,0.687" Width="173"/>
+        <Label Content="Parent Two and Grandparents" HorizontalAlignment="Left" Margin="8,155,0,0" VerticalAlignment="Top" Width="175"/>
+        <Label Content="Upload Image button&#xA;(a popup)" HorizontalAlignment="Left" Margin="35,186,0,0" VerticalAlignment="Top"/>
+        <Label Content="Generate Report button" HorizontalAlignment="Left" Margin="28,359,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+        <Label Content="Uma Info button" HorizontalAlignment="Left" Margin="48,282,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+        <Label Content="Dropdown umas from upload" HorizontalAlignment="Left" Margin="10,251,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="173"/>
     </Grid>
 </Window>
